2005-03-18  Daniel Macks  <dmacks@netspace.org>

	* CLI.pm: Better sanity-check of user input to prompt_selection
	and prompt_boolean
	* Package.pm: Improved diagnostics when dup %f with different %e.
	
2005-03-14  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm: Fix prompt for CVS username.

2005-03-11  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Engine.pm: fix double display of shlibs library reading

2005-03-11  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Fix warning when another process has removed buildlock

2005-03-10  Daniel Macks  <dmacks@netspace.org>

	* VirtPackage.pm: Use opendir() for reading a dir.

2005-03-10  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: add a check for /Developer/SDK

2005-03-09  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: add a check for cups

2005-03-08  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Build all dpkg scripts concurrently in memeory
	instead of looking over them one at a time.

2005-03-08  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Package.pm: refactoring require_packages and forget_packages
	* Bootstrap.pm, Engine.pm, Selfupdate.pm: Removing calls to
	Fink::Shlibs->require_packages, Fink::Shlibs->forget_packages

2005-03-08  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Bootstrap.pm, Engine.pm: Adding missing calls to rebuilt the
	shlibs.db
	* Package.pm: Fixed require_packages from 2005-02-23 commit to
	combine duplicate code

2005-03-07  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Config.pm: Added new $dbpath var
	* Shlibs.pm, Package.pm, Selfupdate.pm: Moved db files to
	%p/var/lib/fink and changed to use new $dbpath var

2005-03-07  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* PkgVersion.pm: remove app link in /Applications/Fink if it
	still exists.

2005-03-03  Daniel Macks  <dmacks@netspace.org>

	* Configure.pm: Invert meaning of choose_mirrors return (true
	means unchanged)
