@@ -2916,7 +2916,7 @@ sub phase_activate {
 	}
 
 	my @deb_installable = map { $_->find_debfile() } @installable;
-	if (&execute("dpkg -i @deb_installable")) {
+	if (&execute("dpkg -i @deb_installable", ignore_INT=>1)) {
 		if (@installable == 1) {
 			my $error = "can't install package ".$installable[0]->get_fullname();
 			$notifier->notify(event => 'finkPackageInstallationFailed', description => $error);
@@ -2944,7 +2944,7 @@ sub phase_deactivate {
 
 	my $notifier = Fink::Notify->new();
 
-	if (&execute("dpkg --remove @packages")) {
+	if (&execute("dpkg --remove @packages", ignore_INT=>1)) {
 		&print_breaking("ERROR: Can't remove package(s). If the above error message " .
 		                "mentions dependency problems, you can try\n" .
 		                "  fink remove --recursive @packages\n" .
@@ -2990,7 +2990,7 @@ sub phase_deactivate_recursive {
 sub phase_purge {
 	my @packages = @_;
 
-	if (&execute("dpkg --purge @packages")) {
+	if (&execute("dpkg --purge @packages", ignore_INT=>1)) {
 		&print_breaking("ERROR: Can't purge package(s). Try 'fink purge --recursive " .
 		                "@packages', which will also purge packages that depend " .
 		                "on the package to be purged.");
@@ -3126,7 +3126,7 @@ EOSCRIPT
 	# install lockpkg (== set lockfile for building ourself)
 	print "Setting build lock...\n";
 	my $debfile = $buildpath.'/'.$lockpkg.'_'.$timestamp.'_'.$debarch.'.deb';
-	my $lock_failed = &execute("dpkg -i $debfile");
+	my $lock_failed = &execute("dpkg -i $debfile", ignore_INT=>1);
 	if ($lock_failed) {
 		&print_breaking(<<EOMSG);
 Can't set build lock for $pkgname ($pkgvers)
@@ -3149,7 +3149,7 @@ EOMSG
 		chomp $old_lock;
 		if ($old_lock eq "$lockpkg\t$timestamp") {
 			# only clean up residue from our exact lockpkg
-			&execute("dpkg -r $lockpkg") and
+			&execute("dpkg -r $lockpkg", ignore_INT=>1) and
 				&print_breaking('You can probably ignore that last message from "dpkg -r"');
 		}
 	}
@@ -3211,7 +3211,7 @@ sub clear_buildlock {
 						"removing it, as it likely belongs to a different ".
 						"fink process. This should not ever happen.");
 	} else {
-		if (&execute("dpkg -r $lockpkg")) {
+		if (&execute("dpkg -r $lockpkg", ignore_INT=>1)) {
 			&print_breaking("WARNING: Can't remove package ".
 							"$lockpkg. ".
 							"This is not fatal, but you may want to remove ".
